@@ -1,24 +1,12 @@
 #include "EXTERN.h"
 #include "perl.h"
 #include "XSUB.h"
-#define NEED_sv_2pv_flags
 #include "ppport.h"
 
 #include <stdlib.h>
 
 /* This file is generated by tools/leap_seconds_header.pl */
 #include "leap_seconds.h"
-
-/* This is a temporary hack until a better solution can be found to
-   get the finite() function on Win32 */
-#ifndef WIN32
-#  include <math.h>
-#  ifndef isfinite
-#    ifdef finite
-#      define finite isfinite
-#    endif
-#  endif
-#endif
 
 #define DAYS_PER_400_YEARS  146097
 #define DAYS_PER_4_YEARS    1461
@@ -203,14 +191,13 @@ _seconds_as_components(self, secs, utc_secs = 0, secs_modifier = 0)
         mPUSHi(m);
         mPUSHi(s);
 
-#ifdef isfinite
 void
 _normalize_tai_seconds(self, days, secs)
     SV* days;
     SV* secs;
 
     PPCODE:
-        if (isfinite(SvNV(days)) && isfinite(SvNV(secs))) {
+        if (Perl_isfinite(SvNV(days)) && Perl_isfinite(SvNV(secs))) {
             IV d = SvIV(days);
             IV s = SvIV(secs);
             IV adj;
@@ -234,7 +221,7 @@ _normalize_leap_seconds(self, days, secs)
     SV* secs;
 
     PPCODE:
-        if (isfinite(SvNV(days)) && isfinite(SvNV(secs))) {
+        if (Perl_isfinite(SvNV(days)) && Perl_isfinite(SvNV(secs))) {
             IV d = SvIV(days);
             IV s = SvIV(secs);
             IV day_length;
@@ -258,7 +245,6 @@ _normalize_leap_seconds(self, days, secs)
             sv_setiv(secs, (IV) s);
         }
 
-#endif /* ifdef isfinite */
 
 void
 _time_as_seconds(self, h, m, s)
